Added export to Chatter functionality for Case and object logos in lookup

--- a/force-app/main/default/classes/RecordSearchUtils_Test.cls
+++ b/force-app/main/default/classes/RecordSearchUtils_Test.cls
@@ -51,7 +51,8 @@ public with sharing class RecordSearchUtils_Test {
                 for(recordSearchUtils.objectWrapper obj : objs){
                     names.add(obj.label);
                 }
-                System.assert(!names.contains('Case'));
+                System.assert(names.contains('Case'));
+                System.assert(names.contains('Account'));
             }
         Test.stopTest();
     }
